# linkedin-vault

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  REQUIREMENTS.md  pyproject.toml  pyrightconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/linkedin_vault/: __init__.py  cli.py  config.py
src/linkedin_vault/chat/: retriever.py  session.py  synthesiser.py
src/linkedin_vault/dashboard/: app.py  schemas.py  server.py
src/linkedin_vault/dashboard/static/: index.html  styles.css
src/linkedin_vault/db/: __init__.py  database.py  migrations.sql  models.py
src/linkedin_vault/enricher/: base.py  factory.py  ollama.py  prompt.py  runner.py  zai.py
src/linkedin_vault/scraper/: browser.py  parser.py  runner.py
src/linkedin_vault/tui/: __init__.py  app.py  vault_screen.py
src/linkedin_vault/tui/screens/: __init__.py  chat_screen.py  config_wizard.py  enrich_screen.py  home_screen.py  login_screen.py  scrape_screen.py  settings_screen.py  setup_screen.py  welcome.py
src/linkedin_vault/utils/: __init__.py  logging.py  url_validation.py
tests/: conftest.py  test_chat.py  test_chat_features.py  test_chat_history_db.py  test_config.py  test_dashboard_api.py  test_database.py  test_e2e.py  test_enricher.py  test_models.py  test_parser.py  test_scrape_resume.py  test_tui.py  test_tui_smoke.py
